# ForgeRAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py  run.py
backend/db/: neo4j_schema.py
backend/ingestion/: auto_tagger.py  chunk_summarizer.py  chunker.py  community_detector.py  entity_extractor.py  graph_builder.py  job_manager.py  pdf_processor.py  pipeline.py  text_extractor.py
backend/models/: common.py  documents.py  graph.py  ingestion.py  search.py
backend/routers/: admin.py  documents.py  graph.py  health.py  images.py  ingestion.py  search.py  system.py
backend/services/: colpali_service.py  gpu_manager.py  graph_reasoning.py  image_service.py  llm_service.py  nemotron_service.py  neo4j_service.py  reranker_service.py  text_embedding_service.py
config/: forgerag.toml.example
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Ingest.tsx  Manage.tsx  Search.tsx  Viewer.tsx
scripts/: bulk_autotag.py  canonicalize_entity_apply.py  canonicalize_entity_dryrun.py  canonicalize_materials_apply.py  canonicalize_materials_dryrun.py  cleanup_numeric_garbage.py  install_neo4j.sh  rebuild_chunks.py  seed_schema.py
systemd/: forgerag-api.service
